--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-02-phonebook",
+  "name": "goit-react-hw-03-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://23birola.github.io/goit-react-hw-02-phonebook",
+  "homepage": "https://23birola.github.io/goit-react-hw-03-phonebook",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -42,8 +42,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.30.0",
     "husky": "^7.0.1",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.2"
+    "lint-staged": "^11.0.1",
+    "prettier": "^2.3.2",
+    "prop-types": "^15.7.2"
   }
 }
